--- a/index.html
+++ b/index.html
@@ -112,32 +112,34 @@
     <section id="contributeContent">
             <div class="contributeTextContent">
               <div class="contentText1">
-                <p>Git for Windows focuses on offering a lightweight, native set of tools that bring the full feature set of the Git SCM to Windows while providing appropriate user interfaces for experienced Git users and novices alike.</p>
+                <p>As an open source project, Git for Windows benefits greatly from both the volunteer work of helpful developers and <a href="#">good bug reports</a> made by Git for Windows' users.</p>
             </div>
             <div class="contentText2">
-                <h3>Git Bash</h3>
-                <p>Git for Windows provides a BASH emulation used to run Git from the command line. *NIX users should feel right at home, as the BASH emulation behaves just like the "git" command in LINUX and UNIX environments.</p>
+                <h3>Governance Model</h3>
+                <p>If you are interested in contributing to the Git for Windows project, have a look at the current <a href="#">governance model</a>. There the roles of those involved in driving this project further down the road are described in detail.</p>
             </div>
             <div class="contentText3">
-                    <h3>Git UI</h3>
-                    <p>As Windows users commonly expect graphical user interfaces, Git for Windows also provides the Git GUI, a powerful alternative to Git BASH, offering a graphical version of just about every Git command line function, as well as comprehensive visual diff tools.</p>
+                    <h3>Bug Reports & Feature Requests</h3>
+                    <p>If you've noticed a bug or simply have an idea that you'd like to see become real, why not work on it? Bug reports and feature requests are typically submitted to the issue tracker on our GitHub repository.</p>
+                    <button class="btn btn-secondary" href="#">Issue Tracker</button>
                 </div>
                 <div class="contentText4">
-                        <h3>Shell Integration</h3>
-                        <p>Simply right-click on a folder in Windows Explorer to access the BASH or GUI.</p>
+                        <h3>Git for Windows SDK : Contributing Code</h3>
+                        <p>The <em>Git for Windows SDK</em> is a build environment that includes all the tools necessary for developers who want to contribute by writing code for Git for Windows.
+
+                            Please look at the <a href="#">technical overview</a> of the Git for Windows packaging and how to include your changes in your own custom installer.</p>
+                            <button class="btn btn-secondary">Download Git for Windows SDK</button>
+                            <p>To contribute/update this web page, see its <a href="#">Repository</a> .</p>
                     </div>  
             </div>
 
             <div id="contributeImg" class="p-4">
                     <div class="contentImg1">
-                      <img src="https://gitforwindows.org/img/gw1web_thumb.png" alt="tool content image">
+                      <img src="https://gitforwindows.org/img/details_features.png" alt="tool content image">
                   </div>
                   <div class="contentImg2 pt-5">
-                      <img src="https://gitforwindows.org/img/gw2web_thumb.png" alt="tool content image">
+                      <img src="https://gitforwindows.org/img/details_contribute.png" alt="tool content image">
                   </div>
-                  <div class="contentImg3 pt-5">
-                          <img src="https://gitforwindows.org/img/gw3web_thumb.png" alt="tool content image">
-                      </div> 
                   </div>         
         </section>
 
