added footed to index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <section id="toolContent">
                 <div class="toolTextContent">
                   <div class="contentText1">
-                    <p>Git for Windows focuses on offering a lightweight, native set of tools that bring the full feature set of the Git SCM to Windows while providing appropriate user interfaces for experienced Git users and novices alike.</p>
+                    <p>Git for Windows focuses on offering a lightweight, native set of tools that bring the full feature set of the <a href="#">Git SCM</a> to Windows while providing appropriate user interfaces for experienced Git users and novices alike.</p>
                 </div>
                 <div class="contentText2">
                     <h3>Git Bash</h3>
@@ -142,6 +142,26 @@
                   </div>
                   </div>         
         </section>
+
+        <footer class="container">
+            <div id="footerLinks">
+                <div class="row">
+                    <div class="col-md-9">
+                        <ul>
+                            <li><a href="#"></a>Faq</li>
+                            <li><a href="#"></a>Repository</li>
+                            <li><a href="#"></a>Mailing List</li>
+                            <li><a href="#"></a>All Releases</li>
+                            <li><a href="#"></a>Snapshot</li>
+                            <li><a href="#"></a>Licenses</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                            <a href="#" class="text-secondary">git for windows</a>
+                        </div>
+                </div>
+            </div>
+        </footer>
 
 
 
