fixed the list item links

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
                 <div class="row">
                     <div class="col-md-9">
                         <ul>
-                            <li><a href="#"></a>Faq</li>
-                            <li><a href="#"></a>Repository</li>
-                            <li><a href="#"></a>Mailing List</li>
-                            <li><a href="#"></a>All Releases</li>
-                            <li><a href="#"></a>Snapshot</li>
-                            <li><a href="#"></a>Licenses</li>
+                            <li><a href="#">Faq</a></li>
+                            <li><a href="#">Repository</a></li>
+                            <li><a href="#">Mailing List</a></li>
+                            <li><a href="#">All Releases</a></li>
+                            <li><a href="#">Snapshot</a></li>
+                            <li><a href="#">Licenses</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
