added a container and container fluid class in footer

--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
                   </div>         
         </section>
 
-        <footer class="container">
-            <div id="footerLinks">
+        <footer class="container-fluid">
+            <div class="container">
+               <div id="footerLinks">
                 <div class="row">
                     <div class="col-md-9">
                         <ul>
@@ -160,7 +161,8 @@
                             <a href="#" class="text-secondary">git for windows</a>
                         </div>
                 </div>
-            </div>
+            </div> 
+            </div>     
         </footer>
 
 
