testing branching in the heading area

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
         <div class="container divColumn">
             <div class="row">
-                <div class="col-sm-5">
-                    <img id="img1" src="https://gitforwindows.org/img/git_logo.png" data-mysrc="https://gitforwindows.org/img/git_logo.png" data-hover="https://gitforwindows.org/img/img/gwindows_logo.png" alt="git logo">
+                <div class="col-sm-5 col-xs-5">
+                    <img id="img1" class="img-fluid" src="https://gitforwindows.org/img/git_logo.png" data-mysrc="https://gitforwindows.org/img/git_logo.png" data-hover="https://gitforwindows.org/img/img/gwindows_logo.png" alt="git logo">
                     
                 </div>
-                <div class="col-sm-7">
+                <div class="col-sm-7 col-xs-7">
                         <h3>We bring the awesome <span>Git</span> SCM to Windows</h3>
                         <hr>
                         <div class="buttonBtn">
