styled the heading a little more

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         <div class="container divColumn">
             <div class="row">
                 <div class="col-sm-5 col-xs-5">
-                    <img id="img1" class="img-fluid" src="https://gitforwindows.org/img/git_logo.png" data-mysrc="https://gitforwindows.org/img/git_logo.png" data-hover="https://gitforwindows.org/img/img/gwindows_logo.png" alt="git logo">
+                    <img id="img1" class="img-fluid" width="300px" height="300px" src="https://gitforwindows.org/img/git_logo.png" data-mysrc="https://gitforwindows.org/img/git_logo.png" data-hover="https://gitforwindows.org/img/img/gwindows_logo.png" alt="git logo">
                     
                 </div>
-                <div class="col-sm-7 col-xs-7">
+                <div class="col-sm-7 col-xs-7 mainTitle">
                         <h3>We bring the awesome <span>Git</span> SCM to Windows</h3>
                         <hr>
                         <div class="buttonBtn">
-                        <button class="btn btn-primary">Download</button>
-                        <button class="btn btn-primary">Contribute</button>  
+                        <button class="btn btn-primary btn-block">Download</button>
+                        <button class="btn btn-primary btn-block">Contribute</button>  
                         </div>
                         
                     </div>
