floated bottom link to the right

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </ul>
                     </div>
                     <div class="col-md-3">
-                            <a href="#" class="text-secondary">git for windows</a>
+                            <a href="#" class="text-secondary gitChar">git for windows</a>
                         </div>
                 </div>
             </div> 
