navbar did not have a a tag link so i added it plus styled it

--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
 
                 <div>
                     <ul class="ulList">
-                        <li class="navLinks">FAQ</li>
-                        <li class="navLinks">Repository</li>
-                        <li class="navLinks">Mailing List</li>
+                        <li class="navLinks">
+                            <a href="#">FAQ</a>
+                        </li>
+                        <li class="navLinks">
+                            <a href="#">Repository</a>
+                        </li>
+                        <li class="navLinks">
+                            <a href="#">Mailing List</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
